# SMELT-Scaffold

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENCE  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
docs/: architecture.md
rust/router/: Cargo.toml
rust/router/src/: main.rs
src/smelt/: __init__.py  __main__.py
src/smelt/agents/: __init__.py
src/smelt/gateway/: __init__.py
src/smelt/memory/: __init__.py
src/smelt/observability/: __init__.py
src/smelt/orchestrator/: __init__.py
src/smelt/schemas/: __init__.py  enums.py  payloads.py  task_request.py  task_state.py  work_item.py  work_result.py
