[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smelt"
version = "1.0.0"
description = "Production multi-agent AI boilerplate — Python + Rust (public scaffold)"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.12"
authors = [{ name = "GIMZWARE", email = "gimz@gimzware.ai" }]

# These are the full dependency declarations used in the private implementation.
# The scaffold stubs do not exercise all of them — install as needed when
# extending stub modules with your own implementations.
dependencies = [
    "anyio>=4.4",
    "pydantic>=2.7,<3",
    "nats-py>=2.7",
    "anthropic>=0.30",
    "litellm>=1.40",
    "instructor>=1.3",
    "redis[hiredis]>=5.0",
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
embeddings = [
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
]
uvloop = [
    "uvloop>=0.19",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
smelt = "smelt.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "E501"]

[tool.hatch.build.targets.wheel]
packages = ["src/smelt"]
