[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "smelt"
version = "1.0.0"
description = "SMELT public scaffold: typed contracts and module boundaries for a multi-agent AI platform (the product is the hosted SMELT Studio SaaS)"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.12"
authors = [{ name = "GIMZWARE", email = "support@gimzware.ai" }]

dependencies = [
    "anyio>=4.4",
    "orjson>=3.10",
    "pydantic>=2.7,<3",
    "nats-py>=2.7",
    "anthropic>=0.30",
    "litellm>=1.40",
    "instructor>=1.3",
    "redis[hiredis]>=5.0",
    "asyncpg>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
embeddings = [
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
]
uvloop = [
    "uvloop>=0.19",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "pyright>=1.1.400",
    "ruff>=0.11",
    "pre-commit>=4.0",
    "pip-audit>=2.7",
]

[project.scripts]
smelt = "smelt.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/smelt"]

[tool.uv]
required-version = ">=0.4"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
branch = true
source = ["smelt"]
omit = [
    "src/smelt/__main__.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_any_explicit = true
disallow_any_decorated = true
warn_unreachable = true
warn_unused_configs = true
packages = ["smelt"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade - modern Python 3.12+ idioms
    "S",     # flake8-bandit - security
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
    "T20",   # flake8-print - ban print()
    "PLE",   # pylint errors
    "PLC",   # pylint conventions
    "PLW",   # pylint warnings
    "RET",   # flake8-return
    "ASYNC", # flake8-async - async anti-patterns
    "ARG",   # flake8-unused-arguments
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "A",     # flake8-builtins
    "TCH",   # flake8-type-checking
    "PTH",   # flake8-use-pathlib
    "N",     # pep8-naming
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "E501", "PLR2004", "ARG", "TC001", "TC002", "TC003"]
