[package]
name = "smelt-router"
version = "1.0.0"
edition = "2021"
description = "High-throughput NATS JetStream message router with gRPC interface for SMELT agent fan-out"

[dependencies]
async-nats = "0.38"
tokio = { version = "1", features = ["full"] }
tonic = "0.13"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"

[build-dependencies]
tonic-build = "0.13"
